# agentos

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  drizzle.config.ts  go.mod  go.sum  package-lock.json  package.json  test-llm.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
api/: README.md
cmd/acceptancejson/: main.go  main_test.go
cmd/apiserver/: main.go  main_test.go
cmd/claw-cli/: main.go  main_test.go
cmd/controller/: main.go
cmd/osctl/: main.go
config/: agents.yaml  default.yaml  team-runtime.yaml  workflows.yaml
deploy/: README.md  docker-compose.yml
docs/: README.md  README_CN.md
docs/architecture/: README.md  README_CN.md  adapters.md  agentos-v1-architecture.md  clawos-v1-architecture.md  monorepo-structure.md  multiprocess-acceptance.md  mvp-scope.md  overview.md  platform-vs-capability-boundary.md  policy-engine.md  skill-system.md
docs/concepts/: README.md  README_CN.md  agentos-v1-architecture.md  clawos-v1-architecture.md
docs/guides/: README.md  README_CN.md  getting-started-cn.md  getting-started.md  integration-playbook.md
docs/internal/: README.md  README_CN.md
docs/plans/: 2026-02-27-agent-platform-roadmap.md  2026-03-07-acceptance-and-planner-implementation-plan.md  2026-03-07-service-gap-remediation-plan.md  2026-03-09-agent-loop-design.md  2026-03-09-agent-loop-implementation-plan.md  2026-03-09-agent-team-parallel-roadmap.md  README.md
docs/reference/: README.md  README_CN.md  api-surfaces-cn.md  api-surfaces.md  configuration-cn.md  configuration.md  core-capabilities-cn.md  core-capabilities.md  runtime-and-sandbox-cn.md  (+1 more)
runtime/: Cargo.toml
runtime/crates/worker/: Cargo.toml  build.rs
runtime/crates/worker/src/: config.rs  executor.rs  grpc.rs  lib.rs  main.rs  proto.rs  registration.rs  service.rs
scripts/: acceptance.sh  acceptance_helpers.sh  acceptance_helpers_test.sh  setup_dev_env.sh  setup_dev_env_test.sh  stage1_acceptance.sh  start_full_stack.sh  start_full_stack_test.sh
src/: cli.rs  gitops.rs  guard.rs  index.ts  jobs.rs  main.rs  messaging.rs  pipeline.rs  rag.rs  server.rs  workflow_config.rs
(+238 files in other folders)
