[package]
name = "orchestrator-rs"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite foundation for AI Orchestrator"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
uuid = { version = "1.12", features = ["v4"] }

[dev-dependencies]
tempfile = "3.17"
