[package]
name = "agentos-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
agentos-sandbox = { path = "../sandbox" }
agentos-telemetry = { path = "../telemetry" }
tower = "0.4"
async-stream = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.11"
